# django-gpt-form

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
gpt_form/: apps.py  forms.py  urls.py  views.py
gpt_form/static/gpt_form/css/: completion-form.css
gpt_form/templates/gpt_form/: completion_form.html
gpt_form/templatetags/: gpt_form.py
